# mkxp

./: .editorconfig  .gitignore  .gitmodules  Brewfile  CMakeLists.txt  README.md  meson.build  meson_options.txt  mkxp.conf  mkxp.conf.sample  mkxp.json  mkxp.json.sample  mkxp.pro  mkxp_amd64.desktop  mkxp_x64.desktop  mkxp_x86.desktop
SDL2_sound/: SDL_sound_internal.h  SDL_sound_skeleton.c  meson.build  stb_vorbis.h
assets/: gamecontrollerdb.txt  manifest.xml  meson.build  mkxp.manifest.in  resource.h  resources.rc  runtime.manifest.in
binding/: audio-binding.cpp  binding-mri-win32.h  binding-mri.cpp  binding-types.h  binding-util.cpp  binding-util.h  bitmap-binding.cpp  cusl-binding.cpp  discord-binding.cpp  disposable-binding.h  etc-binding.cpp  filesystem-binding.cpp  flashable-binding.h  font-binding.cpp  graphics-binding.cpp  http-binding.cpp  input-binding.cpp  meson.build  minidl-binding.cpp  miniffi-binding.cpp  miniffi.c  miniffi.cpp  miniffi.h  module_rpg.cpp  module_rpg1.rb.xxd  module_rpg2.rb.xxd  plane-binding.cpp  sceneelement-binding.h  serializable-binding.h  sprite-binding.cpp  table-binding.cpp  tilemap-binding.cpp  tilemapvx-binding.cpp  viewport-binding.cpp  viewportelement-binding.h  window-binding.cpp  windowvx-binding.cpp
binding-legacy/: bitmap-binding.cpp  disposable-binding.h  filesystem-binding.cpp  graphics-binding.cpp  meson.build  plane-binding.cpp  table-binding.cpp  tilemap-binding.cpp  tilemapvx-binding.cpp  viewport-binding.cpp  window-binding.cpp  windowvx-binding.cpp
binding-mri/: audio-binding.cpp  binding-mri.cpp  binding-types.h  binding-util.cpp  binding-util.h  bitmap-binding.cpp  disposable-binding.h  etc-binding.cpp  filesystem-binding.cpp  flashable-binding.h  font-binding.cpp  graphics-binding.cpp  input-binding.cpp  meson.build  module_rpg.cpp  module_rpg.rb.xxd  module_rpg2.rb.xxd  module_rpg3.rb.xxd  oneshot-binding.cpp  plane-binding.cpp  sceneelement-binding.h  serializable-binding.h  sprite-binding.cpp  table-binding.cpp  tilemap-binding.cpp  tilemapvx-binding.cpp  viewport-binding.cpp  viewportelement-binding.h  window-binding.cpp  windowvx-binding.cpp
binding-mruby/: audio-binding.cpp  binding-mruby.cpp  binding-types.h  binding-util.cpp  binding-util.h  bitmap-binding.cpp  disposable-binding.h  etc-binding.cpp  flashable-binding.h  font-binding.cpp  graphics-binding.cpp  input-binding.cpp  meson.build  module_rpg.c  module_rpg.xxd  plane-binding.cpp  sceneelement-binding.h  serializable-binding.h  sprite-binding.cpp  table-binding.cpp  tilemap-binding.cpp  viewport-binding.cpp  viewportelement-binding.h  window-binding.cpp
binding-mruby/mrb-ext/: file.cpp  file.h  kernel.cpp  marshal.cpp  marshal.h  rwmem.cpp  rwmem.h  time.cpp
linux/: .gitignore  AppRun  Makefile  copy_dependencies.sh  install.sh  make_appimg.sh  meson.build  mkxp-z.desktop  vars.sh
macos/: .gitignore  CocoaHelpers.hpp  CocoaHelpers.mm  Config.xcconfig  Deps.make  Info.plist  Makefile  README.md  codesign.sh  entitlements.plist  icon.icns  icon_mk.icns  macpack.sh  meson.build  mkxp.xcconfig  setup.command
macos/Dependencies/: .AppleSilicon  .Intel  .gitignore  .iOS  Brewfile  arm64.make  common.make  dependencies.make  make_macuniversal.command  make_macuniversal.sh  setup  setup.sh  x86_64.make
macos/config/: mkxp.AppleSilicon.xcconfig  mkxp.Intel.xcconfig  mkxp.Universal.xcconfig  mkxp.xcconfig  steam_appid.txt  steamshim.xcconfig
macos/lib/: .gitignore
macos/mkxp-z.xcodeproj/: project.pbxproj
macos/views/: SettingsMenuController.h  SettingsMenuController.mm  TouchBar.h  TouchBar.mm  sdl_codes.h  settingsmenu.xib
scripts/: Data_Footsteps.rb  Data_Item.rb  Data_SpecialEventData.rb  Ed_Message.rb  EssentialsCompatibility.rb  EssentialsLargeTilemaps.rb  EssentialsTilemapHack.rb  Game_Actor.rb  Game_Actors.rb  Game_BattleAction.rb  Game_Battler 1.rb  Game_Battler 2.rb  Game_Battler 3.rb  Game_Character 1.rb  Game_Character 2.rb  Game_Character 3.rb  Game_CommonEvent.rb  Game_Enemy.rb  Game_Event.rb  Game_Follower.rb  Game_Light.rb  Game_Map.rb  Game_Oneshot.rb  Game_Party.rb  Game_Picture.rb  Game_Player.rb  Game_Screen.rb  Game_SelfSwitches.rb  Game_Switches.rb  Game_System.rb  Game_Temp.rb  Game_Variables.rb  Interpreter 1.rb  Interpreter 2.rb  Interpreter 3.rb  Interpreter 4.rb  Interpreter 5.rb  Interpreter 6.rb  Interpreter 7.rb  Item.rb  (+74 more)
shader/: bitmapBlit.frag  blur.frag  blurH.vert  blurV.vert  common.h  flashMap.frag  flatColor.frag  gray.frag  hue.frag  lanczos3.frag  meson.build  minimal.vert  plane.frag  simple.frag  simple.vert  simpleAlpha.frag  simpleAlphaUni.frag  simpleColor.frag  simpleColor.vert  simpleMatrix.vert  sprite.frag  sprite.vert  tilemap.frag  tilemap.vert  tilemapvx.vert  trans.frag  transSimple.frag
src/: al-util.h  aldatasource.h  alstream.cpp  alstream.h  audio.cpp  audio.h  audiostream.cpp  audiostream.h  autotiles.cpp  autotilesvx.cpp  binding.h  bitmap.cpp  bitmap.h  boost-hash.h  bundledfont.cpp  config.cpp  config.h  config.mm  crossplatform.h  debuglogger.cpp  debuglogger.h  debugwriter.h  defines.hpp  discordstate.cpp  discordstate.h  disposable.h  etc-internal.h  etc.cpp  etc.h  eventthread.cpp  eventthread.h  exception.h  fake-api.cpp  fake-api.h  fake-api.mm  filesystem.cpp  filesystem.h  filesystem.mm  flashable.h  flashmap.h  (+89 more)
src/audio/: al-util.h  aldatasource.h  alstream.cpp  alstream.h  audio.cpp  audio.h  audiostream.cpp  audiostream.h  fluid-fun.cpp  fluid-fun.h  midisource.cpp  sdlsoundsource.cpp  sharedmidistate.h  soundemitter.cpp  vorbissource.cpp
src/crypto/: rgssad.cpp
src/display/: autotiles.cpp  autotilesvx.cpp  bitmap.cpp  bitmap.h  font.cpp  font.h  graphics.cpp  graphics.h  plane.cpp  sprite.cpp  sprite.h  tilemap-common.h  tilemap.cpp  tilemap.h  tilemapvx.cpp  viewport.cpp  viewport.h  window.cpp  windowvx.cpp  windowvx.h
src/etc/: etc-internal.h  etc.cpp  etc.h  table.cpp  table.h
src/filesystem/: filesystem.cpp  filesystem.h  filesystemImpl.cpp  (+2 more)
windows/: .gitignore  Makefile  meson.build  mkxpz.manifest  resource.h  resource.rc  resource.rc.in  vars.sh
(+110 files in other folders)
